--- a/pbo_sesi1.ipynb
+++ b/pbo_sesi1.ipynb
@@ -41,7 +41,7 @@
         "##\n",
         "# Menampilkan alamat lengkap seseorang\n",
         "#\n",
-        "print(\"Hendri Ahmadian\")\n",
+        "print(\"Dilla Maulidia\")\n",
         "print(\"Department of Information Technology\")\n",
         "print(\"UIN Ar-Raniry\")\n",
         "print(\"Jalan Syech Abdurrauf Kopelma Darussalam\")\n",
